Correct `line-height` issue where descenders were being cropped

--- a/src/components/Setups/Setups.scss
+++ b/src/components/Setups/Setups.scss
@@ -70,7 +70,7 @@
                 text-overflow: ellipsis;
                 overflow: hidden;
                 white-space: nowrap;
-                line-height: 1.1;
+                line-height: 1.3;
             }
 
             .comment {
